Bug 193520 - missing shortcuts in “Standard Keyboard Shortcuts”
Summary: missing shortcuts in “Standard Keyboard Shortcuts”
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_standard_actions (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 248462 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-21 16:32 UTC by M G Berberich
Modified: 2011-04-14 08:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description M G Berberich 2009-05-21 16:32:42 UTC
Version:            (using KDE 4.2.2)
Installed from:    Debian testing/unstable Packages

Some of the KDE standard shortcuts are missing in kcm_standard_actions.so

  System Settings → Keyboard and Mouse → Standard keyboard Shortcuts

p.e. PasteSelection DeleteWordBack DeleteWordForward Begin End Prior Next Reload BeginningOfLine EndOfLine BackwardWord ForwardWord TabNext TabPrev TextCompletion PrevCompletion NextCompletion SubstringCompletion RotateUp RotateDown
Comment 1 Simon Persson 2010-12-14 16:46:24 UTC
*** Bug 248462 has been marked as a duplicate of this bug. ***