Allow all standard shortcuts to be edited, not only those used by a standard action.

BUG: 193520
CCMAIL: kde@michael-jansen.biz
DIGEST: